# Wet2

./: CMakeLists.txt  Chain.cpp  Chain.h  OurMath.h  Player.cpp  Player.h  PlayerNode.cpp  PlayerNode.h  PlayerTable.cpp  PlayerTable.h  Team.cpp  Team.h  TeamId.cpp  TeamId.h  TeamNode.h  TeamStats.cpp  TeamStats.h  TeamTree.h  main.cpp  other_out.txt  submissions.txt  unit_test_runner.sh  worldcup23a2.cpp  worldcup23a2.h  ~$גיל בית רטוב 2.docx  תרגיל בית רטוב 2.docx
