cmake_minimum_required(VERSION 3.23)
project(Wet2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Wet2 Chain.cpp Chain.h main23a2.cpp OurMath.h Player.cpp Player.h PlayerNode.cpp PlayerNode.h PlayerTable.cpp PlayerTable.h Team.cpp Team.h TeamId.cpp TeamId.h TeamNode.h TeamStats.cpp TeamStats.h TeamTree.h wet2util.h worldcup23a2.cpp worldcup23a2.h)
